# ot-agent

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample_assets.csv  sample_report.json
tests/: test_pipeline.py
