[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ot-agent"
version = "0.1.0"
description = "Hybrid deterministic + LLM OT asset classification agent — IEC 62443 aligned"
requires-python = ">=3.9"
dependencies = [
    "ot-asset-classifier",
    "pydantic>=2.0",
    "httpx>=0.27",
    "chromadb>=0.5",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
